feat: Added JWT autorization and easysearch connection

--- a/packages/backend/.env
+++ b/packages/backend/.env
@@ -3,3 +3,7 @@ JWT_EXPIRATION=360000
 
 CLIENT_URL=localhost:3000
 BACK_URL=localhost:4200
+
+ELASTIC_ENDPOINT=https://ddb9833cfad946bb97fd5a53dd0a8902.us-central1.gcp.cloud.es.io:443
+ELASTIC_API_KEY_ID=SztBr40BIu2cdl1j2gmr
+ELASTIC_API_KEY=UfMwHxt5TS6FDhZ03d82NA
