--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -13,6 +13,7 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^8.12.1",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/nodemailer": "^6.4.14",
@@ -48,7 +49,8 @@
     "request": "^2.88.0",
     "typeorm": "^0.3.7",
     "typescript": "^4.7.4",
-    "yup": "^1.3.3"
+    "yup": "^1.3.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
