Added libs for caching and task managment

--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -13,6 +13,7 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@types/node": "^17.0.17",
     "@elastic/elasticsearch": "^8.12.1",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
@@ -24,6 +25,7 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
+    "bull": "^4.12.2",
     "config": "^3.1.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -40,11 +42,13 @@
     "joi": "^17.11.1",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.8",
+    "nodemon": "^3.0.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.10.0",
     "prettier": "^2.7.1",
+    "redis": "^4.6.13",
     "reflect-metadata": "^0.1.13",
     "request": "^2.88.0",
     "typeorm": "^0.3.7",
