--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -13,10 +13,11 @@
     "build": "tsc"
   },
   "dependencies": {
-    "@types/node": "^17.0.17",
     "@elastic/elasticsearch": "^8.12.1",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
+    "@types/firebase": "^3.2.1",
+    "@types/multer": "^1.4.11",
     "@types/nodemailer": "^6.4.14",
     "@types/passport": "^1.0.16",
     "@types/passport-jwt": "^4.0.0",
@@ -35,14 +36,15 @@
     "eslint-import-resolver-typescript": "^3.4.2",
     "express": "^4.17.1",
     "express-validator": "^5.3.1",
+    "firebase": "^10.8.0",
     "formik": "^2.4.5",
     "gravatar": "^1.8.0",
     "handlebars": "^4.7.8",
     "http-status-codes": "^1.3.2",
     "joi": "^17.11.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.8",
-    "nodemon": "^3.0.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -64,7 +66,6 @@
     "@types/jsonwebtoken": "^8.3.2",
     "@types/node": "^18.7.8",
     "concurrently": "^4.1.0",
-    "nodemon": "^1.19.0",
     "tslint": "^6.1.3",
     "typescript": "^4.7.4"
   }
