--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -1,9 +1,8 @@
 {
   "typeRoots": ["@types/node", "./src/types"],
-
   "compilerOptions": {
     "strict": true,
-    "module": "CommonJS",
+    "module": "commonjs",
     "declaration": true,
     "removeComments": true,
     "allowSyntheticDefaultImports": true,
