--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -22,6 +22,7 @@
     "@types/passport": "^1.0.16",
     "@types/passport-jwt": "^4.0.0",
     "@types/passport-local": "^1.0.38",
+    "@types/sharp": "^0.32.0",
     "axios": "^0.21.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -53,6 +54,7 @@
     "redis": "^4.6.13",
     "reflect-metadata": "^0.1.13",
     "request": "^2.88.0",
+    "sharp": "^0.33.2",
     "typeorm": "^0.3.7",
     "typescript": "^4.7.4",
     "yup": "^1.3.3",
