--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -22,7 +22,6 @@
     "@types/passport": "^1.0.16",
     "@types/passport-jwt": "^4.0.0",
     "@types/passport-local": "^1.0.38",
-    "@types/sharp": "^0.32.0",
     "axios": "^0.21.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -42,6 +41,7 @@
     "gravatar": "^1.8.0",
     "handlebars": "^4.7.8",
     "http-status-codes": "^1.3.2",
+    "jimp": "^0.22.10",
     "joi": "^17.11.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
@@ -54,7 +54,6 @@
     "redis": "^4.6.13",
     "reflect-metadata": "^0.1.13",
     "request": "^2.88.0",
-    "sharp": "^0.33.2",
     "typeorm": "^0.3.7",
     "typescript": "^4.7.4",
     "yup": "^1.3.3",
