--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -24,23 +24,29 @@
     "joi": "^17.11.1",
     "js-cookie": "^3.0.5",
     "lerna": "^8.0.2",
+    "lightgallery": "^2.7.2",
     "prettier": "^3.2.3",
     "primereact": "^10.5.1",
     "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-icons": "^5.0.1",
+    "react-lightgallery": "^0.9.0",
     "react-query": "^3.39.2",
     "react-router": "6",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
     "react-spring": "^9.7.3",
     "react-spring-3d-carousel": "^1.3.4",
+    "sanitize-html": "^2.12.1",
     "styled-components": "^5.3.5",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "web-vitals": "^2.1.2",
     "yarn": "^1.22.21",
+    "yet-another-react-lightbox": "^3.17.0",
     "yup": "^1.3.3"
   },
   "devDependencies": {
@@ -55,6 +61,7 @@
     "@types/react-input-mask": "^3.0.1",
     "@types/react-modal": "^3.12.1",
     "@types/react-router-dom": "^5.3.0",
+    "@types/sanitize-html": "^2.11.0",
     "@types/styled-components": "^5.1.14",
     "typescript": "^4.5.4"
   },
