feat: Added reCaptcha implementation

--- a/packages/backend/.env
+++ b/packages/backend/.env
@@ -16,3 +16,5 @@ FIREBASE_PROJECT_ID="famous-team-414908"
 FIREBASE_STORAGE_BUCKET="famous-team-414908.appspot.com"
 FIREBASE_MESSAGE_SENDER_ID="59120754347"
 FIREBASE_APP_ID="1:59120754347:web:4fbd27462f3997c02121ee"
+
+SITE_SECRET=6Lc-z34pAAAAACnkGj2Gbi1bFJTkoagn4ql5SV6L
