--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -38,6 +38,7 @@
     "express-validator": "^5.3.1",
     "firebase": "^10.8.0",
     "formik": "^2.4.5",
+    "graphql": "^16.8.1",
     "gravatar": "^1.8.0",
     "handlebars": "^4.7.8",
     "http-status-codes": "^1.3.2",
