--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -14,7 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.0.3",
     "@types/js-cookie": "^3.0.6",
-    "@types/node": "^20.11.5",
+    "@types/react-google-recaptcha": "^2.1.9",
     "add": "^2.0.6",
     "axios": "^1.6.5",
     "eslint-config-prettier": "^9.1.0",
@@ -32,6 +32,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.0.1",
     "react-lightgallery": "^0.9.0",
     "react-query": "^3.39.2",
@@ -53,11 +54,12 @@
     "@iconify/react": "^3.2.1",
     "@types/axios": "^0.14.0",
     "@types/jest": "^26.0.15",
-    "@types/node": "^16.10.2",
+    "@types/node": "^20.11.20",
     "@types/qs": "^6.9.7",
     "@types/react": "^18.2.48",
     "@types/react-blockies": "^1.4.1",
     "@types/react-dom": "^18.2.18",
+    "@types/react-google-recaptcha": "^2.1.9",
     "@types/react-input-mask": "^3.0.1",
     "@types/react-modal": "^3.12.1",
     "@types/react-router-dom": "^5.3.0",
