--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -35,6 +35,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^3.4.2",
     "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
     "express-validator": "^5.3.1",
     "firebase": "^10.8.0",
     "formik": "^2.4.5",
