--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -14,14 +14,6 @@
   },
   "dependencies": {
     "@elastic/elasticsearch": "^8.12.1",
-    "@types/bcrypt": "^5.0.2",
-    "@types/cors": "^2.8.17",
-    "@types/firebase": "^3.2.1",
-    "@types/multer": "^1.4.11",
-    "@types/nodemailer": "^6.4.14",
-    "@types/passport": "^1.0.16",
-    "@types/passport-jwt": "^4.0.0",
-    "@types/passport-local": "^1.0.38",
     "axios": "^0.21.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -47,11 +39,9 @@
     "joi": "^17.11.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.8",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "pg": "^8.10.0",
     "prettier": "^2.7.1",
     "redis": "^4.6.13",
     "reflect-metadata": "^0.1.13",
@@ -70,6 +60,14 @@
     "@types/node": "^18.7.8",
     "concurrently": "^4.1.0",
     "tslint": "^6.1.3",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
+    "@types/firebase": "^3.2.1",
+    "@types/multer": "^1.4.11",
+    "@types/nodemailer": "^6.4.14",
+    "@types/passport": "^1.0.16",
+    "@types/passport-jwt": "^4.0.0",
+    "@types/passport-local": "^1.0.38"
   }
 }
