fix: Refactor backend .env file, added some console.logs

--- a/packages/backend/.env
+++ b/packages/backend/.env
@@ -10,6 +10,7 @@ ELASTIC_API_KEY='b8ADnp9NR4eMsG2Gjwumuw'
 
 REDIS_PORT=6379
 REDIS_HOST=redis
+# REDIS_HOST=127.0.0.1
 
 FIREBASE_API_KEY="AIzaSyBZQv4jaEodv3Fvaue5nyWx7QsS3ER1qtE"
 FIREBASE_AUTH_DOMAIN="famous-team-414908.firebaseapp.com"
